[package]
name = "xmtp_common"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
web-time.workspace = true
xmtp_cryptography.workspace = true

# optional
once_cell = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tracing-flame = { version = "0.2", optional = true }
tracing-forest = { version = "0.1", optional = true, features = ["chrono"] }
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "env-filter",
  "ansi",
  "json",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
gloo-timers = { workspace = true, features = ["futures"] }
tracing-wasm = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window"] }
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream = { workspace = true, features = ["time"] }

[dev-dependencies]
thiserror.workspace = true
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "env-filter",
  "ansi",
  "json",
] }
parking_lot.workspace = true
once_cell.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["time", "macros", "rt", "sync"] }
wasm-bindgen-test.workspace = true
tracing-wasm = { version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = [
  "time",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tracing-forest = { version = "0.1", features = ["chrono"] }
ctor.workspace = true
parking_lot = { workspace = true }

[features]
test-utils = [
  "dep:parking_lot",
  "dep:tracing-subscriber",
  "dep:tracing-wasm",
  "dep:console_error_panic_hook",
  "dep:tracing-forest",
  "dep:once_cell",
]
bench = [
  "test-utils",
  "dep:tracing-subscriber",
  "dep:once_cell",
  "dep:tracing-flame",
]
