[package]
name = "xmtp_common"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures = { workspace = true, features = ["std"] }
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "rt"] }
tracing.workspace = true
web-time.workspace = true

# optional/test-utils/dev-deps
once_cell = { workspace = true, optional = true }
owo-colors = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tracing-flame = { version = "0.2", optional = true }
tracing-forest = { version = "0.2", optional = true, features = ["chrono"] }
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "env-filter",
  "ansi",
  "json",
], optional = true }
xmtp_cryptography.workspace = true
xmtp_macro = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
gloo-timers = { workspace = true, features = ["futures"] }
tracing-wasm = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window"] }
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
tokio_with_wasm = { version = "0.8.7", features = ["full"] }
wasm-bindgen-test = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream = { workspace = true, features = ["time"] }
fdlimit.workspace = true
ctor.workspace = true

[dev-dependencies]
once_cell.workspace = true
owo-colors.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing-subscriber = { workspace = true, features = [
  "fmt",
  "env-filter",
  "ansi",
  "json",
] }
xmtp_cryptography = { workspace = true, features = ["test-utils"] }
xmtp_macro.workspace = true


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["time", "macros", "rt", "sync"] }
wasm-bindgen-test.workspace = true
tracing-wasm = { version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = [
  "time",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tracing-forest = { version = "0.2", features = ["chrono"] }
ctor.workspace = true
parking_lot = { workspace = true }

[features]
logging = ["dep:tracing-subscriber"]
test-utils = [
  "dep:parking_lot",
  "dep:tracing-subscriber",
  "dep:tracing-wasm",
  "dep:console_error_panic_hook",
  "dep:tracing-forest",
  "dep:once_cell",
  "dep:wasm-bindgen-test",
  "dep:xmtp_macro",
  "dep:owo-colors",
  "xmtp_cryptography/test-utils",

]
bench = [
  "test-utils",
  "dep:tracing-subscriber",
  "dep:once_cell",
  "dep:tracing-flame",
]

[lints]
workspace = true
