[package]
name = "xmtp-db-manager"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
tracing.workspace = true
xmtp_common.workspace = true
xmtp_db.workspace = true
diesel_migrations = { workspace = true, features = ["sqlite"] }

[lints]
workspace = true

[features]
default = []
test-utils = []
bench = []
