[package]
name = "diesel-wasm-sqlite"
version = "0.1.1"
edition = "2021"

[dependencies]
diesel = { git = "https://github.com/xmtp/diesel", branch = "insipx/wasm-backend", features = ["r2d2", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
# wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tokio = { version = "1.38", default-features = false, features = ["rt", "macros", "sync", "io-util", "time"] }
futures = "0.3"

[dev-dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
