[package]
name = "log_parser"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
native-dialog = "0.7"
parking_lot.workspace = true
pest = "2.8.5"
pest_derive = "2.8.5"
slint = "1.14.1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
xmtp_common.workspace = true
xmtp_mls = { workspace = true, features = ["test-utils"] }

[build-dependencies]
slint-build = "1.14.1"

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
bench = []
test-utils = []
