[package]
name = "mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls = { git= "https://github.com/openmls/openmls", features = ["test-utils"] }
tokio = "1.28.1"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
base64 = "0.21.4"
openmls_traits = { git= "https://github.com/openmls/openmls" }
openmls_basic_credential = { git= "https://github.com/openmls/openmls" }
openmls_rust_crypto = { git= "https://github.com/openmls/openmls" }
rand = "0.8.5"
xmtp = { path = "../xmtp"}
xmtp_api_grpc = { path = "../xmtp_api_grpc"}
hex = "0.4.3"
uuid = { version = "1.4.1", features = ["v4"] }
tls_codec = "0.3.0"
test-log = "0.2.12"
env_logger = "0.10.0"
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }
xmtp_cryptography = { path = "../xmtp_cryptography"}
futures = "0.3.28"
ethers = "2.0.10"
sha256 = "1.4.0"
prost = { version = "0.11", features = ["prost-derive"] }
