[package]
edition = "2021"
name = "mls_validation_service"
version = "0.1.4"
build = "build.rs"
license.workspace = true

[[bin]] # Bin to run the Validation Service
name = "mls-validation-service"
path = "src/main.rs"

[build-dependencies]
vergen-git2 = { workspace = true, features = ["build"] }

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
tonic = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
warp = "0.3.6"
xmtp_cryptography = { path = "../xmtp_cryptography" }
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full", "convert"] }

[dev-dependencies]
anyhow.workspace = true
ethers.workspace = true
rand = { workspace = true }
xmtp_id = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }

[features]
test-utils = ["xmtp_id/test-utils"]
