[package]
build = "build.rs"
edition = "2021"
license.workspace = true
name = "mls_validation_service"
version = "0.1.4"

[[bin]] # Bin to run the Validation Service
name = "mls-validation-service"
path = "src/main.rs"

[build-dependencies]
vergen-git2 = { workspace = true, features = ["build"] }

[dependencies]
alloy.workspace = true
async-trait.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
futures = { workspace = true }
lru = "0.14.0"
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
tonic = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
warp = "0.3.6"
xmtp_configuration.workspace = true
xmtp_cryptography = { path = "../xmtp_cryptography" }
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full", "convert"] }


[dev-dependencies]
rand = { workspace = true }
rstest.workspace = true
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_configuration = { workspace = true, features = ["test-utils"] }
xmtp_id = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["test-utils"] }


[features]
test-utils = ["xmtp_id/test-utils", "xmtp_configuration/test-utils"]
