[package]
build = "build.rs"
edition = "2024"
name = "mls_validation_service"
version.workspace = true
license.workspace = true

[[bin]] # Bin to run the Validation Service
name = "mls-validation-service"
path = "src/main.rs"

[build-dependencies]
vergen-git2 = { workspace = true, features = ["build"] }

[dependencies]
alloy.workspace = true
async-trait.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
futures = { workspace = true }
lru = "0.14.0"
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
tonic = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
warp = "0.3.6"
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_cryptography.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { workspace = true, features = ["grpc_server_impls"] }


[dev-dependencies]
rand = { workspace = true }
rstest.workspace = true
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_configuration = { workspace = true, features = ["test-utils"] }
xmtp_id = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["test-utils"] }


[features]
test-utils = ["xmtp_id/test-utils", "xmtp_configuration/test-utils"]
