[package]
name = "performance"
edition = "2024"
license.workspace = true
version.workspace = true

[[bin]]
name = "streaming"
path = "src/streaming.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.49", features = ["derive"] }
futures.workspace = true
indicatif = "0.18.0"
parking_lot.workspace = true
rlimit = "0.10.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xmtp_mls = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true

[features]
bench = []
test-utils = []
