[package]
name = "xmtp"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "update-schema"
path = "src/bin/update-schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["types"]
types = []

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
vodozemac = {git= "https://github.com/xmtp/vodozemac", branch="dev"}
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full", "grpc"] }
async-trait = "0.1.68"
xmtp_cryptography = { path = "../xmtp_cryptography"}
hex = "0.4.3"
diesel = { version = "2.0.4", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
log = "0.4.17"
rand = "0.8.5"
toml = "0.7.4"
ethers = "2.0.4"
ethers-core = "2.0.4"
prost = { version = "0.11", features = ["prost-derive"] }
futures = "0.3.28"
base64 = "0.21.1"
tokio = "1.28.1"
anyhow = "1.0.71"

[dev-dependencies]
clap = {version = "4.3.0", features=["derive"]}
env_logger = "0.10.0"
tokio = {version="1.28.1", features=["rt", "macros"]}
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
qrcode = { version = "0.12"}
walletconnect = {git="https://github.com/nlordell/walletconnect-rs.git", features=["qr", "transport"]}
url = "2.3.1"
tempfile = "3.5.0"

[dependencies.libsqlite3-sys]
version = "0.26.0"
features = ["bundled-sqlcipher-vendored-openssl"]
