[package]
name = "xmtp"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "update-schema"
path = "src/bin/update-schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["types"]
types = []
grpc = ["xmtp_proto/grpc"]
native = ["libsqlite3-sys/bundled-sqlcipher-vendored-openssl"]

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
vodozemac = {git= "https://github.com/xmtp/vodozemac", branch="dev"}
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }
async-trait = "0.1.68"
xmtp_cryptography = { path = "../xmtp_cryptography"}
hex = "0.4.3"
diesel = { version = "2.0.4", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", optional = true}
log = "0.4.17"
rand = "0.8.5"
toml = "0.7.4"
ethers = "2.0.4"
ethers-core = "2.0.4"
prost = { version = "0.11", features = ["prost-derive"] }
futures = "0.3.28"
base64 = "0.21.1"
tokio = "1.28.1"
anyhow = "1.0.71"

[dev-dependencies]
tempfile = "3.5.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
env_logger = "0.10.0"
