[package]
name = "xmtp_api"
edition = "2024"
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures = { workspace = true }
hex.workspace = true
prost = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
xmtp_api_grpc.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_proto = { workspace = true, features = ["convert"] }

mockall = { workspace = true, optional = true }


# test utils
[dev-dependencies]
futures-timer.workspace = true
mockall.workspace = true
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_configuration = { workspace = true, features = ["test-utils"] }
xmtp_id = { workspace = true, features = ["test-utils"] }
xmtp_proto = { workspace = true, features = ["test-utils"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
ctor.workspace = true

[features]
test-utils = [
  "xmtp_common/test-utils",
  "xmtp_configuration/test-utils",
  "xmtp_proto/test-utils",
  "xmtp_id/test-utils",
  "xmtp_api_grpc/test-utils",
  "dep:mockall",
]
