[package]
name = "xmtp_api_d14n"
edition = "2024"
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
derive_builder.workspace = true
futures.workspace = true
hex.workspace = true
http = "1.2"
impl-trait-for-tuples = "0.2"
itertools.workspace = true
once_cell.workspace = true
openmls_rust_crypto = { workspace = true }
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
xmtp_common.workspace = true
xmtp_configuration = { workspace = true }

xmtp_proto = { workspace = true, features = ["convert"] }

# Test Utils
ctor = { workspace = true, optional = true }
xmtp_api_grpc = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openmls = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
openmls = { workspace = true, features = ["js"] }

[dev-dependencies]
hex.workspace = true
tokio.workspace = true
wasm-bindgen-test.workspace = true
xmtp_api_grpc = { workspace = true, features = ["test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_proto = { workspace = true, features = ["convert", "test-utils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ctor.workspace = true

[features]
test-utils = ["xmtp_api_grpc/test-utils", "dep:ctor"]
dev = ["xmtp_configuration/dev", "xmtp_proto/dev"]
