[package]
name = "xmtp_api_d14n"
edition = "2024"
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive_builder.workspace = true
futures.workspace = true
hex.workspace = true
http = "1.2"
hyper = { version = "1.7", default-features = false }
impl-trait-for-tuples = "0.2"
itertools.workspace = true
openmls_rust_crypto = { workspace = true }
parking_lot.workspace = true
pin-project-lite = { workspace = true }
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
url.workspace = true
xmtp_api_grpc = { workspace = true }
xmtp_common.workspace = true
xmtp_configuration = { workspace = true }
xmtp_cryptography.workspace = true
xmtp_id = { workspace = true }
xmtp_proto = { workspace = true }

# Test Utils
ctor = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }
wasm-bindgen-test = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openmls = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
openmls = { workspace = true, features = ["js"] }


[dev-dependencies]
futures-test.workspace = true
hex.workspace = true
mockall.workspace = true
rstest.workspace = true
tokio.workspace = true
xmtp_api_grpc = { workspace = true, features = ["test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_proto = { workspace = true, features = ["test-utils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ctor.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
# needed for rstest
futures-timer = { workspace = true, features = ["wasm-bindgen"] }


[features]
test-utils = [
  "xmtp_api_grpc/test-utils",
  "dep:mockall",
  "dep:ctor",
  "dep:wasm-bindgen-test",
]
v3 = []
d14n = []
dev = ["xmtp_configuration/dev", "xmtp_proto/dev"]
