[package]
edition = "2021"
license.workspace = true
name = "xmtp_api_grpc"
version.workspace = true

[dependencies]
async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
http = "1.2"
prost = { workspace = true, features = ["prost-derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tower = "0.5.2"
tracing.workspace = true
xmtp_common.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full", "convert"] }

# Anything but iOS and Android will use either webpki or native.
# If native certs are not found, it will fallback to webpki
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tonic = { workspace = true, features = [
  "default",
  "transport",
  "tls-native-roots",
  "tls-webpki-roots",
] }

# Force Android + iOS to use webki
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tonic = { workspace = true, features = [
  "default", 
  "transport", 
  "tls-webpki-roots",
] }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }

[features]
test-utils = ["xmtp_proto/test-utils"]
