[package]
edition = "2021"
license.workspace = true
name = "xmtp_api_grpc"
version.workspace = true

[dependencies]
async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
h2 = "0.4"
http = "1.2"
hyper = "1.6"
pin-project-lite = "0.2.15"
prost = { workspace = true, features = ["prost-derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tower = "0.5.2"
tracing.workspace = true
url.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full", "convert"] }

toxiproxy_rust = { workspace = true, optional = true }


# Anything but iOS and Android will use either webpki or native.
# If native certs are not found, it will fallback to webpki
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tonic = { workspace = true, features = [
  "default",
  "tls",
  "tls-native-roots",
  "tls-webpki-roots",
] }

# Force Android + iOS to use webki
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tonic = { workspace = true, features = ["default", "tls", "tls-webpki-roots"] }

[dev-dependencies]
toxiproxy_rust = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }

[features]
test-utils = ["xmtp_proto/test-utils", "dep:toxiproxy_rust"]
