[package]
edition = "2021"
license.workspace = true
name = "xmtp_api_grpc"
version.workspace = true

[dependencies]
async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
h2 = "0.4"
http = "1.2"
http-body = "1.0"
pin-project-lite = "0.2.15"
prost = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tracing.workspace = true
url.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_proto = { workspace = true, features = ["convert"] }

toxiproxy_rust = { workspace = true, optional = true }


# Anything but iOS, Android & WASM will use either webpki or native.
# If native certs are not found, it will fallback to webpki
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_family = "wasm", target_os = "unknown")))'.dependencies]
tonic = { workspace = true, features = [
  "default",
  "tls-native-roots",
  "tls-webpki-roots",
  "tls-ring",
] }

# Force Android + iOS to use webki
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tonic = { workspace = true, features = [
  "default",
  "tls-webpki-roots",
  "tls-ring",
] }


[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
hyper = "1.6"
tower = { workspace = true, default-features = true }


[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
tonic-web-wasm-client.workspace = true
tonic = { workspace = true, features = ["codegen"] }
hyper = { version = "1.6", default-features = false }
tower = { workspace = true }


[dev-dependencies]
toxiproxy_rust = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xmtp_proto = { workspace = true, features = ["test-utils"] }

[features]
default = ["v3"]
test-utils = ["xmtp_proto/test-utils", "dep:toxiproxy_rust"]
v3 = []
