[package]
name = "xmtp_api_grpc_gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
futures = "0.3"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
prost = { version = "0.11", features = ["prost-derive"] }
prost-types = "0.11"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tokio = {version="1.28.1", features=["rt", "sync", "macros", "io-util"]}
tokio-util = {version="0.7.8", features=["codec", "rt", "io-util"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
xmtp_cryptography = { path = "../xmtp_cryptography", features = ["ws"] }
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

[dev-dependencies]
uuid = { version = "1.3.1", features = ["v4"] }
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
